Correction du familyTree

--- a/myFamilyTree.html
+++ b/myFamilyTree.html
@@ -11,7 +11,8 @@
 
 <!-- 3rd Library File -->
 <script language="javascript" type="text/javascript" src="javascript/jquery-1.9.0.min.js"></script>
-<script language="javascript" type="text/javascript" src="javascript/arboreal-0.1.js"></script>
+<script language="javascript" type="text/javascript" src="lib/arboreal.js"></script>
+<script language="javascript" type="text/javascript" src="lib/FamilyTreeLayout.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/kinetic-v4.3.1.min.js"></script>
 
 <!-- mine Library File -->
