--- a/myFamilyTree.html
+++ b/myFamilyTree.html
@@ -11,11 +11,11 @@
 
 <!-- 3rd Library File -->
 <script language="javascript" type="text/javascript" src="javascript/jquery-1.9.0.min.js"></script>
-<script language="javascript" type="text/javascript" src="lib/arboreal.js"></script>
-<script language="javascript" type="text/javascript" src="lib/FamilyTreeLayout.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/kinetic-v4.3.1.min.js"></script>
 
 <!-- mine Library File -->
+<script language="javascript" type="text/javascript" src="javascript/arboreal.js"></script>
+<script language="javascript" type="text/javascript" src="javascript/FamilyTreeLayout.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/dataTree.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/myFamilyTree.js"></script>
 </head>
