--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -10,8 +10,8 @@
   <script type="text/javascript" src="lib/jasmine-1.3.1/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-  <script type="text/javascript" src="../lib/arboreal.js"></script>
-  <script type="text/javascript" src="../lib/FamilyTreeLayout.js"></script>
+  <script type="text/javascript" src="../javascript/arboreal.js"></script>
+  <script type="text/javascript" src="../javascript/FamilyTreeLayout.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/arboreal-spec.js"></script>
