--- a/myFamilyTree.html
+++ b/myFamilyTree.html
@@ -12,6 +12,7 @@
 <!-- 3rd Library File -->
 <script language="javascript" type="text/javascript" src="javascript/jquery-1.9.0.min.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/kinetic-v4.3.1.min.js"></script>
+<script language="javascript" type="text/javascript" src="javascript/underscore-14.4.min.js"></script>
 
 <!-- mine Library File -->
 <script language="javascript" type="text/javascript" src="javascript/arboreal.js"></script>
