--- a/myFamilyTree.html
+++ b/myFamilyTree.html
@@ -15,6 +15,7 @@
 <script language="javascript" type="text/javascript" src="javascript/underscore-14.4.min.js"></script>
 
 <!-- mine Library File -->
+<script language="javascript" type="text/javascript" src="javascript/FamilyTreeModule.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/arboreal.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/FamilyTreeLayout.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/dataTree.js"></script>
