Amélioration du formulaire d'ajout des noeuds

--- a/myFamilyTree.html
+++ b/myFamilyTree.html
@@ -14,6 +14,7 @@
 <script language="javascript" type="text/javascript" src="javascript/third-party/jquery-1.9.0.min.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/third-party/kinetic-v4.4.0.min.js"></script>
 <script language="javascript" type="text/javascript" src="javascript/third-party/underscore-1.4.4.min.js"></script>
+<script language="javascript" type="text/javascript" src="javascript/third-party/jquery.infieldlabel.min.js"></script>
 <script language="javascript" type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
 <!-- mine Library File -->
@@ -27,24 +28,24 @@
 
 <body>
 	<div id="treeCanvas"></div>    
-<div id="registration">
+<div id="createEdit">
  <h2>Création / Edition</h2>
 
- <form id="RegisterUserForm" action="" method="post">
+ <form id="CreateEditPersonForm" action="" method="post">
  <fieldset>
  <p>
  <label for="name">Nom Complet</label>
- <input id="name" name="name" type="text" class="text" value="" />
+ <input id="name" name="fullName" type="text" class="text" value="" />
  </p>
 
  <p>
- <label for="tel">Date de naissance</label>
- <input id="tel" name="tel" type="tel" class="text" value="" />
+ <label for="birthDate">Date de naissance jj/mm/AAAA</label>
+ <input id="birthDate" name="birthDate" type="text" class="text" value="" />
  </p>
 
  <p>
- <label for="email">Sexe</label>
- <input id="email" name="email" type="email" class="text" value="" />
+ <input id="sex" type="radio" name="Sexe" value="male" />  Mâle
+ <input id="sex" type="radio" name="Sexe" value="female" /> Femelle
  </p>
 
  <p>
